[backend] adding the course service layer business rules and adding the Mapper pattern